--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,53 +1,53 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
-#### [ 戳破习的皇帝梦？北京四通桥事件冲击二十大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019186.md)
-#### [ 央视惊现罕见一幕专家：习近平以奇怪的方式被劫持(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019166.md)
 #### [ 二十大开幕式 4名中共元老不知所踪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019242.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 戳破习的皇帝梦？北京四通桥事件冲击二十大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019186.md)
 #### [ 十年一梦同归殊途 二十大泽国江山入战图(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018712.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 二十大开幕 习近平任报告起草组组长等同宣告连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019235.md)
+#### [ 央视惊现罕见一幕专家：习近平以奇怪的方式被劫持(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019166.md)
 #### [ 胡海峰赴京参加二十大 这回离升官不远了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019171.md)
 #### [ 中央军委换血过半“新军头”浮出水面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019076.md)
-#### [ 二十大开幕 习近平任报告起草组组长等同宣告连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019235.md)
 #### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
-#### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
-#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
-#### [ 失宠于习近平？“之江新军”落选中央委员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019066.md)
-#### [ 藉民意拉习下马？北京惊现巨幅 “彭勇士”背后之举不简单(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019158.md)
 #### [ 二十大抗议声中登场 张高丽陷性丑闻后首露面](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846359.md)
-#### [ 中共政治局半数换血 台媒预测新晋人员名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552256.md)
-#### [ 传山东大学陪黑人留学生3个月的女生全部打胎(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019179.md)
-#### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845578.md)
+#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 【快讯】二十大开幕 习近平做报告 王岐山出席 江泽民呢？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662706.md)
+#### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
 #### [ 四通桥事件后 中共20大北京出现最新风景(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019227.md)
-#### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
-#### [ 分析：二十大后谁任总理仍是谜 有四个情景](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845664.md)
 #### [ 分析：习近平似大权在握 难掩党内斗争激烈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846220.md)
 #### [ 上海大学退休教师转发反习标语 被警察带走](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846408.md)
 #### [ 二十大 习近平即使连任也难甩掉五大困局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846189.md)
-#### [ 中共开党外人士座谈会 习讲话为何口风大变？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845752.md)
-#### [ 胡锦涛之子胡海峰赴京开会 低调不看镜头](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845883.md)
 #### [ 四通桥事件震动新老权贵 二十大成火山口？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846024.md)
-#### [ 北京巨幅让中共审查杀红眼 海外声援遍地开花(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019211.md)
-#### [ 章天亮: 四通桥事件后 传言习裸退 王岐山泄露习真正动向](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662628.md)
 #### [ 深陷性丑闻的张高丽二十大露面 依然“扑克脸”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019260.md)
-#### [ 【晚间新闻】20大前军队异动 北京午夜军车上街](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845997.md)
-#### [ 【拍案惊奇】习指示四通桥事件？中共史上罕见抗议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845577.md)
+#### [ 章天亮: 四通桥事件后 传言习裸退 王岐山泄露习真正动向](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662628.md)
+#### [ 中共政治局半数换血 台媒预测新晋人员名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552256.md)
+#### [ 失宠于习近平？“之江新军”落选中央委员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019066.md)
+#### [ 北京巨幅让中共审查杀红眼 海外声援遍地开花(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019211.md)
 #### [ 二十大序幕拉开 推特传二十大出大事了！大陆多地现“四通桥标语”海内外响应彭立发](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662667.md)
-#### [ 官媒曝孟晚舟获释内情 被指为二十大作宣传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845964.md)
 #### [ 二十大内斗中开场 习扶胡锦涛就座 江泽民消失](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552745.md)
-#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
-#### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845256.md)
-#### [ 二十大会期确定 习近平任选举小组长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552218.md)
-#### [ 分析：二十大后中共将推进“计划经济2.0”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845828.md)
-#### [ 中共“千年大计”五年烂尾 雄安宣传秀引嘲讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845158.md)
-#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
-#### [ 胡锦涛之子胡海峰赴京参加二十大 仕途再引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551893.md)
-#### [ 钟原：北京看守立交桥与长春看守电线杆](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845913.md)
-#### [ 四通桥事件细节曝光 彭载舟扮成施工员挂横幅](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845625.md)
-#### [ 章天亮: 勇士拉横幅倒习 为何习近平四面树敌却仍能连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662361.md)
-#### [ 七中通报未提习两路线 专家析中共垮台天意](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13844995.md)
-#### [ 【秦鹏直播】北京四通桥维修闹剧 事件延烧世界](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845681.md)
 #### [ 【老北京茶馆】彭载舟标语传全世界 党彻底慌了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846293.md)
-#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
-#### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845578.md)
+#### [ 北京四通桥事件发酵 大陆多地惊现雷同标语(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019256.md)
+#### [ 传山东大学陪黑人留学生3个月的女生全部打胎(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019179.md)
+#### [ 网文：财富将重新分配 他们正排队离场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552494.md)
+#### [ 北京四通桥事件赌上一切 矢板明夫：中国底层民众心声(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019229.md)
+#### [ 【秦鹏直播】法学教授叫板习 吁解除防疫措施](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846298.md)
+#### [ 【热门话题】法学教授叫板习/魔戒剧透中共结局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552738.md)
+#### [ 分析：20大后 习近平不太可能纠正经济路线](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845672.md)
+#### [ 组图：中共二十大如临大敌 北京如碉堡三步一岗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552645.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 四通桥事件震动新老权贵 二十大成火山口？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846024.md)
 #### [ 二十大 习近平即使连任也难甩掉五大困局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846189.md)
+#### [ 二十大发布会 港媒记者的大巴遭严格检查](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846424.md)
+#### [ 【菁英论坛】二十大前摊牌 四通桥现反共义旗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846297.md)
+#### [ 【时事金扫描】北京四通桥的超时空秘密](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845671.md)
+#### [ 【菁英论坛】二十大前摊牌 四通桥现反共义旗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846297.md)
+#### [ “要把中文灭净了” 二十大前网络审查力度空前](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552345.md)
+#### [ 分析：二十大报告无新意 难抵四通桥抗议效应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846571.md)
+#### [ 二十大会期确定 习近平任选举小组长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552218.md)
+#### [ 【十字路口】二十大权斗 魔戒剧透中共结局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846092.md)
+#### [ 分析：二十大习近平拼连任 深陷五大困局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552700.md)
+#### [ 张高丽现身二十大开幕式 性侵丑闻再引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552820.md)
+#### [ 传浙江大学门口发生惨烈车祸 多人倒地(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019200.md)
+#### [ 被逼戴监控腕带 北京女子对中共防疫忍无可忍](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846301.md)
+#### [ 王友群：当今中国乱象的关键问题是什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846313.md)
+#### [ 20大前军方点名四虎 再提没有“铁帽子王”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846254.md)
+#### [ 中共二十大前 习近平致函金正恩称加强合作](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846472.md)
